# RAG-Q-A

./: Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt
src/api/: generate_questions.py
src/modules/: config.py  generator.py  news_fetcher.py  question_generator.py  rag.py  records.py
src/modules/chunkers/: __init__.py  chunker_factory.py  heirarichal.py  recursive.py  semantic.py
src/modules/rerankers/: bge_v3.py
src/modules/retrievers/: bm25.py  hybrid.py  semantic.py
src/repositories/: config.py  history.py  records.py  utils.py
src/requests/: generation_records.py  quiz.py
src/responses/: news.py
src/services/: embedding_service.py  generator_service.py  llm_service.py  news_service.py
src/utils/: config.py  singleton.py
