[project]
name = "finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow==3.0.2",
    "apache-airflow-providers-google==10.1.0",
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.14",
    "langchain>=0.3.26",
    "langchain-community==0.3.18",
    "langchain-core",
    "langchain-groq==0.3.2",
    "langchain-openai==0.3.18",
    "langchain-perplexity==0.1.1",
    "langchain-text-splitters",
    "newsapi-python>=0.2.7",
    "nltk>=3.9.1",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.1",
    "python-multipart",
    "ruff>=0.12.1",
    "scikit-learn>=1.7.0",
    "streamlit>=1.46.1",
    "torchvision>=0.22.1",
    "transformers>=4.53.0",
]
