[project]
name = "finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "apache-airflow==3.0.2",
    "apache-airflow-providers-google==10.1.0",
    "faiss-cpu>=1.9.0",
    "fastapi>=0.115.14",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core",
    "langchain-groq>=0.2.0",
    "langchain-huggingface>=0.1.0",
    "langchain-openai==0.3.18",
    "langchain-perplexity==0.1.1",
    "langchain-text-splitters",
    "newsapi-python>=0.2.7",
    "nltk>=3.9.1",
    "numpy>=1.24.0",
    "pandas>=2.3.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "python-multipart",
    "ruff>=0.12.1",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=3.0.0",
    "streamlit>=1.40.0",
    "torchvision>=0.22.1",
    "transformers>=4.53.0",
]
